Fixed overflow bug in dialog's widget.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -276,7 +276,7 @@
             }
         }
     }
-    .ui-widget-content {
+    >.ui-widget-content {
         background: none;
         border:none;
         .ui-dialog-buttonset {
@@ -285,6 +285,7 @@
             padding: @margin/2 @margin;
         }
         &.ui-dialog-content {
+            overflow: auto;
             padding: @margin/2 @margin @margin @margin;
         }
     }
